# SSAD

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.MD  README.md  README_PYPI.md  pyproject.toml  third-party.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
docs/diagrams/: complete.plantuml  confidence_estimators.plantuml  datamodules.plantuml  datasets.plantuml  distribution_analyzers.plantuml  models.plantuml  modules.plantuml  ssad_workflow.plantuml  ssad_workflow_light.plantuml
examples/: grand.py  radon.py  utils.py
examples/datasets/: __init__.py  mnist.py
src/ssad/confidence_estimators/: api.py  confidence_intervals_configuration.py
src/ssad/datamodules/: api.py  dataframe_with_labels.py
src/ssad/datasets/: __init__.py  general_tabular_datamodule.py  utils.py
src/ssad/distribution_analyzers/: __init__.py
src/ssad/loggers/: logging_config.py  mlflow_logger.py
src/ssad/models/: __init__.py  api.py  autoencoder.py  variational_autoencoder.py
src/ssad/modules/: api.py  free_energy_module.py
ssad/: __init__.py
ssad/confidence_estimators/: __init__.py  binary_confidence.py  confidence_estimator.py  confidence_intervals_configuration.py  hybrid_confidence.py  supports_confidence_estimation.py
ssad/datamodules/: __init__.py  dataframe_with_labels.py  dataset_interfaces.py  dataset_with_confidence.py  self_supervision_datamodule.py
ssad/datamodules/transforms/: dataframe_to_tensor.py
ssad/datasets/: __init__.py  api.py  general_tabular_datamodule.py  pipeline.py  utils.py
ssad/distribution_analyzers/: __init__.py  api.py  evt_thresholding.py  supports_distribution_analysis.py  triangular_thresholding.py
ssad/loggers/: __init__.py  api.py  logging_config.py  mlflow_logger.py
ssad/models/: autoencoder.py  variational_autoencoder.py
ssad/modules/: __init__.py  api.py  cosine_reconstruction_module.py  free_energy_module.py  self_supervision_module.py  supports_self_supervision.py
