[tool.poetry]
name = "ssad"
version = "0.1.0"
description = "Framework for self-supervised training of reconstruction-based autoencoder models for anomaly detection."
authors = ["Samuel Berlemont <samuel.berlemont@orange.com>", "Mohammed Achraf El Khamlichi", "Julien Cumin <julien1.cumin@orange.com>"]
readme = "README.MD"
license = "MIT"
repository = "https://https://github.com/Orange-OpenSource/SSAD"
packages = [
    {include = "ssad"},
    {include = "ssad/py.typed"},
]
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Orange-OpenSource/SSAD"
Issues = "https://github.com/Orange-OpenSource/SSAD/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

category_encoders = ">=2.8,<3.0"
numpy = ">=1.26,<3.0"
pandas = ">=2.2,<3.0"
scipy = ">=1.15,<2.0"

torch = ">=2.5,<2.7"
lightning = ">=2.5,<3.0"

mlflow = ">=2.21,<3.0"
psutil = ">=7.0,<8.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.2.240603"
torchvision = ">=0.20,<0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
