[tool.poetry]
name = "ssad"
version = "0.1.0"
description = "Framework for self-supervised training of reconstruction-based autoencoder models for anomaly detection."
authors = [
  "Samuel Berlemont <samuel.berlemont@orange.com>",
  "Mohammed Achraf El Khamlichi",
  "Julien Cumin <julien1.cumin@orange.com>",
]
readme = "README.MD"
license = "MIT"
repository = "https://github.com/Orange-OpenSource/SSAD"
packages = [
  { include = "ssad" },
  { include = "ssad/py.typed" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
Homepage = "https://github.com/Orange-OpenSource/SSAD"
Issues = "https://github.com/Orange-OpenSource/SSAD/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

category_encoders = ">=2.8,<3.0"
numpy = ">=1.26,<3.0"
pandas = ">=2.2,<3.0"
scipy = ">=1.15,<2.0"
scikit-learn = ">=1.9,<2.0"

torch = ">=2.10,<3.0"
lightning = ">=2.5,<3.0"

mlflow = ">=3.12,<4.0"
psutil = ">=7.0,<8.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.2.240603"
torchvision = ">=0.20,<0.22"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
