[project]
name = "ssad"
version = "0.1.0"
description = "Framework for self-supervised training of reconstruction-based autoencoder models for anomaly detection."
readme = "README.MD"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Samuel Berlemont", email = "samuel.berlemont@orange.com" },
  { name = "Mohammed Achraf El Khamlichi" },
  { name = "Julien Cumin", email = "julien1.cumin@orange.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "category_encoders>=2.8,<3.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.15,<2.0",
  "scikit-learn>=1.9,<2.0",
  "torch>=2.10,<3.0",
  "lightning>=2.5,<3.0",
  "mlflow>=3.12,<4.0",
  "psutil>=7.0,<8.0",
  "nvidia-ml-py>=13.610,<14.0"
]

[project.urls]
Homepage = "https://github.com/Orange-OpenSource/SSAD"
Issues = "https://github.com/Orange-OpenSource/SSAD/issues"
Repository = "https://github.com/Orange-OpenSource/SSAD"

[project.optional-dependencies]
dev = [
  "pandas-stubs==2.2.2.240603",
  "torchvision>=0.25,<0.29",
  "types-pytz>=2026.2",
  "mypy>=1.11,<2.0",
  "pylint>=3.2,<4.0",
]

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ssad*"]

[tool.setuptools.package-data]
ssad = ["py.typed"]

[tool.mypy]
python_version = "3.10"
files = ["ssad"]
pretty = true
show_error_codes = true
warn_unused_configs = true

# Progressive strictness - active baseline (Palier 1)
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

# warn_redundant_casts = true
# warn_unused_ignores = true
# strict_equality = true
# disallow_incomplete_defs = true

# disallow_untyped_defs = true
# warn_return_any = true
# disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "category_encoders.*",
  "lightning.*",
  "mlflow.*",
  "torchvision.*",
]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.10"
jobs = 0
recursive = true
ignore = ["build", "dist", ".venv"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "R0903", # too-few-public-methods
]

[tool.pylint.design]
max-args = 10
max-locals = 25
max-branches = 20
max-statements = 80

[tool.pylint.typecheck]
ignored-modules = ["torch", "lightning", "mlflow"]